Fix bug with too much space around panorama images in body

--- a/assets/stylesheets/_iphone.scss
+++ b/assets/stylesheets/_iphone.scss
@@ -47,7 +47,7 @@ $padding-text: 15px;
 }
 
 .panorama {
-    padding: 0;
+    padding: 0 !important;
     max-width: none !important;
 
     .media-element {
